--- a/server.conf
+++ b/server.conf
@@ -2,7 +2,8 @@
 server.socket_host = "0.0.0.0"
 server.socket_port = 8080
 [/]
-tools.staticfile.root = "/home/pi/webapps/Cherrypy-test/"
+# tools.staticfile.root = "/home/pi/webapps/Cherrypy-test/"
+tools.staticfile.root = "/home/ubuntu/cherrypy_app/"
 [/static/layout.css]
 tools.staticfile.on = True
 tools.staticfile.filename = "static/layout.css"
