Added example accounts

--- a/server.conf
+++ b/server.conf
@@ -2,8 +2,11 @@
 server.socket_host = "0.0.0.0"
 server.socket_port = 8080
 [/]
-# tools.staticfile.root = "/home/pi/webapps/Cherrypy-test/"
-tools.staticfile.root = "/home/ubuntu/cherrypy_app/"
+tools.staticfile.root = "/home/pi/webapps/Cherrypy-test/"
+# tools.staticfile.root = "/home/ubuntu/cherrypy_app/"
 [/static/layout.css]
 tools.staticfile.on = True
 tools.staticfile.filename = "static/layout.css"
+[/favicon.ico]
+tools.staticfile.on: True,
+tools.staticfile.filename: "static/fuel_can.jpg"
